@@ -1,0 +1,19 @@
+﻿namespace AjIo.Methods.Arithmetic
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public enum ArithmeticsOperator
+    {
+        Add,
+        Subtract,
+        Multiply,
+        Divide,
+        IntegerDivide,
+        Plus,
+        Minus,
+        Modulo
+    }
+}
